--- a/src/index.html
+++ b/src/index.html
@@ -31,9 +31,9 @@
   <meta name="og:description" content="One dashboard for all licenses and drops. Join us!">
 
 
-  <meta property="og:image" content="https://cactussoft.io/assets/main.png">
-  <meta property="og:image:secure_url" content="https://cactussoft.io/assets/main.png">
-  
+  <meta property="og:image" content="https://dashboard.cactusweb.io/assets/main.png">
+  <meta property="og:image:secure_url" content="https://dashboard.cactusweb.io/assets/main.png">
+
   <style>
     @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700;800&display=swap');
     *{
