--- a/src/index.html
+++ b/src/index.html
@@ -2,12 +2,55 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>DashboardGeneralV3</title>
+    <title>CactusDash</title>
     <base href="/" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="icon" type="image/x-icon" href="favicon.ico" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
+    <meta name="type" content="website" />
+    <meta property="og:type" content="website" />
+    <meta name="robots" content="all" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="author" content="CactusDash" />
+    <meta property="og:author" content="CactusDash" />
+
+    <meta name="site_name" content="CactusDash - dashboards" />
+    <meta property="og:site_name" content="CactusDash - dashboards" />
+    <meta name="title" content="CactusDash - dashboards" />
+    <meta property="og:title" content="CactusDash - dashboards" />
+
+    <meta name="url" content="https://dashboard.cactusweb.io/" />
+    <meta property="og:url" content="https://dashboard.cactusweb.io/" />
+
+    <link
+      rel="icon"
+      type="image/x-icon"
+      href="https://dashboard.cactusweb.io/assets/cactusdash-logo.png"
+    />
+    <link
+      rel="apple-touch-icon"
+      href="https://dashboard.cactusweb.io/assets/cactusdash-logo.png"
+    />
+
     <link rel="manifest" href="manifest.webmanifest" />
-    <meta name="theme-color" content="#1976d2" />
+    <meta name="theme-color" content="#3880EC" />
+
+    <meta
+      name="description"
+      content="One dashboard for all licenses and drops. Join us!"
+    />
+    <meta
+      name="og:description"
+      content="One dashboard for all licenses and drops. Join us!"
+    />
+
+    <meta
+      property="og:image"
+      content="https://dashboard.cactusweb.io/assets/main.png"
+    />
+    <meta
+      property="og:image:secure_url"
+      content="https://dashboard.cactusweb.io/assets/main.png"
+    />
 
     <link rel="stylesheet" href="/assets/fonts/icons/icon-font.css" />
 
@@ -17,6 +60,45 @@
       href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
       rel="stylesheet"
     />
+
+    <!-- Yandex.Metrika counter -->
+    <script type="text/javascript">
+      (function (m, e, t, r, i, k, a) {
+        m[i] =
+          m[i] ||
+          function () {
+            (m[i].a = m[i].a || []).push(arguments);
+          };
+        m[i].l = 1 * new Date();
+        (k = e.createElement(t)),
+          (a = e.getElementsByTagName(t)[0]),
+          (k.async = 1),
+          (k.src = r),
+          a.parentNode.insertBefore(k, a);
+      })(
+        window,
+        document,
+        "script",
+        "https://mc.yandex.ru/metrika/tag.js",
+        "ym"
+      );
+
+      ym(76558717, "init", {
+        clickmap: true,
+        trackLinks: true,
+        accurateTrackBounce: true,
+        webvisor: true,
+      });
+    </script>
+    <noscript
+      ><div>
+        <img
+          src="https://mc.yandex.ru/watch/76558717"
+          style="position: absolute; left: -9999px"
+          alt=""
+        /></div
+    ></noscript>
+    <!-- /Yandex.Metrika counter -->
   </head>
   <body>
     <app-root></app-root>
