[new] Footer + fixes

--- a/src/index.html
+++ b/src/index.html
@@ -101,7 +101,7 @@
     <!-- /Yandex.Metrika counter -->
   </head>
   <body>
-    <app-root></app-root>
+    <csd-root></csd-root>
     <noscript
       >Please enable JavaScript to continue using this application.</noscript
     >
