--- a/src/index.html
+++ b/src/index.html
@@ -62,7 +62,7 @@
     />
 
     <!-- Yandex.Metrika counter -->
-    <script type="text/javascript">
+    <!-- <script type="text/javascript">
       (function (m, e, t, r, i, k, a) {
         m[i] =
           m[i] ||
@@ -97,7 +97,7 @@
           style="position: absolute; left: -9999px"
           alt=""
         /></div
-    ></noscript>
+    ></noscript> -->
     <!-- /Yandex.Metrika counter -->
   </head>
   <body>
