--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
     <meta name="type" content="website" />
     <meta property="og:type" content="website" />
-    <meta name="robots" content="all" />
+    <meta name="robots" content="index, follow" />
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="author" content="CactusDash" />
     <meta property="og:author" content="CactusDash" />
@@ -62,7 +62,7 @@
     />
 
     <!-- Yandex.Metrika counter -->
-    <!-- <script type="text/javascript">
+    <script type="text/javascript">
       (function (m, e, t, r, i, k, a) {
         m[i] =
           m[i] ||
@@ -97,7 +97,7 @@
           style="position: absolute; left: -9999px"
           alt=""
         /></div
-    ></noscript> -->
+    ></noscript>
     <!-- /Yandex.Metrika counter -->
   </head>
   <body>
