--- a/src/index.html
+++ b/src/index.html
@@ -52,6 +52,20 @@
       content="https://dashboard.cactusweb.io/assets/main.png"
     />
 
+    <link
+      rel="preload"
+      href="/assets/fonts/icons/icons.ttf"
+      as="font"
+      type="font/ttf"
+      crossorigin
+    />
+    <link
+      rel="preload"
+      href="/assets/fonts/icons/icons.woff"
+      as="font"
+      type="font/woff"
+      crossorigin
+    />
     <link rel="stylesheet" href="/assets/fonts/icons/icon-font.css" />
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
