--- a/src/index.html
+++ b/src/index.html
@@ -84,6 +84,11 @@
             (m[i].a = m[i].a || []).push(arguments);
           };
         m[i].l = 1 * new Date();
+        for (var j = 0; j < document.scripts.length; j++) {
+          if (document.scripts[j].src === r) {
+            return;
+          }
+        }
         (k = e.createElement(t)),
           (a = e.getElementsByTagName(t)[0]),
           (k.async = 1),
