[fit] SeoService optimization

--- a/src/index.html
+++ b/src/index.html
@@ -13,8 +13,8 @@
     <meta name="author" content="CactusDash" />
     <meta property="og:author" content="CactusDash" />
 
-    <meta name="site_name" content="CactusDash - dashboards" />
-    <meta property="og:site_name" content="CactusDash - dashboards" />
+    <meta name="site_name" content="CactusDash" />
+    <meta property="og:site_name" content="CactusDash" />
     <meta name="title" content="CactusDash - dashboards" />
     <meta property="og:title" content="CactusDash - dashboards" />
 
